...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_teammates_button"
                        android:layout_width="150dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="32dp"
                        android:backgroundTint="@color/button_color"
                        android:fontFamily="@font/poppins"
                        android:text="@string/add_teammate"
...
                    app:layout_constraintHorizontal_bias="0.462"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/region_dropdown_menu"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_button"
                    android:layout_width="311dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/button_color"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
...
