...
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_01_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
...
